--- a/Zeus/ViewControllers/我的/MyRelatedUserCell.xib
+++ b/Zeus/ViewControllers/我的/MyRelatedUserCell.xib
@@ -27,7 +27,14 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="张三" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jpz-S7-1L8">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="associated_mutual" translatesAutoresizingMaskIntoConstraints="NO" id="uDj-GG-Tce">
+                        <rect key="frame" x="282" y="31" width="18" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="18" id="1o6-bn-rDl"/>
+                            <constraint firstAttribute="height" constant="18" id="hbj-ev-OT9"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="rayjune" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jpz-S7-1L8">
                         <rect key="frame" x="88" y="15" width="214" height="21"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -37,14 +44,20 @@
                 <constraints>
                     <constraint firstItem="BxV-e9-TCT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="2Nr-tb-8GM"/>
                     <constraint firstItem="BxV-e9-TCT" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="BGr-KW-DNV"/>
+                    <constraint firstItem="uDj-GG-Tce" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Nie-lQ-V4D"/>
+                    <constraint firstAttribute="trailing" secondItem="uDj-GG-Tce" secondAttribute="trailing" constant="20" id="WBb-g8-6WW"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="headImageView" destination="BxV-e9-TCT" id="oMg-AT-toD"/>
                 <outlet property="mobile_Lbl" destination="00G-8v-g99" id="nzs-yZ-sEj"/>
+                <outlet property="relatedEachOtherFlag" destination="uDj-GG-Tce" id="KEo-51-F9H"/>
                 <outlet property="userName_Lbl" destination="jpz-S7-1L8" id="i4o-lu-xCf"/>
             </connections>
             <point key="canvasLocation" x="235" y="220"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="associated_mutual" width="20" height="20"/>
+    </resources>
 </document>
