--- a/Zeus/ViewControllers/我的/RelateEachOtherCell.xib
+++ b/Zeus/ViewControllers/我的/RelateEachOtherCell.xib
@@ -8,28 +8,28 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="RelateEachOtherCell" customModule="Zeus" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="49.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="associated_mutual" translatesAutoresizingMaskIntoConstraints="NO" id="8we-lK-hXs">
-                        <rect key="frame" x="20" y="13" width="18" height="18"/>
+                        <rect key="frame" x="20" y="16" width="18" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="DEI-jW-m0v"/>
                             <constraint firstAttribute="width" constant="18" id="ec7-RS-RJI"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="associated_rightarrow" translatesAutoresizingMaskIntoConstraints="NO" id="gtQ-xw-lBs">
-                        <rect key="frame" x="308" y="16" width="7" height="12"/>
+                        <rect key="frame" x="308" y="19" width="7" height="12"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="7" id="L5d-9X-Q7q"/>
                             <constraint firstAttribute="height" constant="12" id="PY0-2M-Pgg"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="相互关联成员" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m5D-sD-FWo">
-                        <rect key="frame" x="46" y="11" width="120" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="相互关联成员" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m5D-sD-FWo">
+                        <rect key="frame" x="46" y="15" width="96" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -37,7 +37,9 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="8we-lK-hXs" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="1RH-ZZ-fIa"/>
+                    <constraint firstItem="m5D-sD-FWo" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="JPU-nu-kNd"/>
                     <constraint firstItem="8we-lK-hXs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Nfk-8s-5dq"/>
+                    <constraint firstItem="m5D-sD-FWo" firstAttribute="leading" secondItem="8we-lK-hXs" secondAttribute="trailing" constant="8" id="ZIG-lS-HDG"/>
                     <constraint firstItem="gtQ-xw-lBs" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ueV-Wv-trd"/>
                     <constraint firstAttribute="trailing" secondItem="gtQ-xw-lBs" secondAttribute="trailing" constant="5" id="woa-cV-hWO"/>
                 </constraints>
