--- a/Zeus/ViewControllers/我的/AddRelatedUserVC.storyboard
+++ b/Zeus/ViewControllers/我的/AddRelatedUserVC.storyboard
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="3cz-o1-aFc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="aUt-zv-hbQ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--新建关联-->
-        <scene sceneID="xZm-9W-aad">
+        <!--Add Related UserVC-->
+        <scene sceneID="rs1-3T-YWt">
             <objects>
-                <viewController storyboardIdentifier="AddRelatedUserVC" id="3cz-o1-aFc" customClass="AddRelatedUserVC" customModule="Zeus" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="bdY-B2-ZEs"/>
-                        <viewControllerLayoutGuide type="bottom" id="pWb-3N-a3c"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Nml-il-jks">
+                <tableViewController id="aUt-zv-hbQ" customClass="AddRelatedUserVC" customModule="Zeus" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="8RG-hZ-KBK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="新建关联" id="LwO-qc-j8f"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    </tableView>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ju5-BL-iZM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5ES-9X-Xo3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="808.5" y="529.5"/>
+            <point key="canvasLocation" x="857" y="329"/>
         </scene>
     </scenes>
 </document>
